--- a/src/scenes/NavBar/Navbar.css
+++ b/src/scenes/NavBar/Navbar.css
@@ -22,7 +22,7 @@
 .nav-menu{
     background-color: #060b26;
     width: 250px;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     position: fixed;
