--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
 @import url('hhtps://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+#footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+ }
