--- a/src/scenes/NavBar/Navbar.css
+++ b/src/scenes/NavBar/Navbar.css
@@ -9,7 +9,7 @@
     background-color: #060b26;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -39,7 +39,7 @@
 
 .nav-text{
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     height: 60px;
     list-style: none;
@@ -71,7 +71,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
 }
 
