--- a/src/scenes/NavBar/Navbar.css
+++ b/src/scenes/NavBar/Navbar.css
@@ -84,5 +84,17 @@ span{
     height: 90vh;
     align-items: center;
     justify-content: center;
-    font-size: 3rem;
+    font-size: 50px;
 }
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    display: flex;
+    font-size: 25px;
+  }
