--- a/src/scenes/ClientView/PurchasePC/purchasePC.css
+++ b/src/scenes/ClientView/PurchasePC/purchasePC.css
@@ -22,8 +22,10 @@
     width: 100%;
     height: 100%;
     max-height: 200px;
-    display: block;
+    display: flex;
     object-fit: cover;
+    margin-left: auto;
+    margin-right: auto;
 }
 .card h3{
     text-transform: uppercase;
